--- a/Examples/00-test.html
+++ b/Examples/00-test.html
@@ -8,16 +8,29 @@
 <!-- <link rel="stylesheet" type="text/css" href="css/default.css"> -->
 <!-- <link rel="stylesheet" type="text/css" href="mint-ui/style.css"> -->
 <style type="text/css">
-*{margin: 0;padding: 0;}
+.inner{width: 100px;height: 100px;background-color: red;}
+.out{width: 200px;height: 200px;background-color: green;}
 
+.span{display: inline-block;padding: 10px 20px;background-color: red;-webkit-transition: .5s;}
+.span:hover{background-color: blue;}
+
+.box{width: 500px;height: 300px;background-repeat: no-repeat;background-position: left center;background-size: 200px;background-image: url('images/001.jpg');border: 1px solid #333;}
+.text{display: none;}
+
+
+<!--[if lt IE 9]>
+.text{display: block;}
+<![endif]-->
 </style>
 </head>
 
 
 <body>
+<p class="text">小于IE9</p>
+<span class="span">过渡</span><br><br>
 
 
-
+<div class="box"></div>
 
 
 
@@ -27,8 +40,6 @@
 <!-- <script type="text/javascript" src="mint-ui/index.js"></script> -->
 <!-- <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script> -->
 <script>
-
-
 
 
 
