广告倒计时自动关闭

--- a/Examples/00-test.html
+++ b/Examples/00-test.html
@@ -10,22 +10,16 @@
 <style type="text/css">
 *{margin: 0;padding: 0;}
 
-
-
 </style>
 </head>
 
-
 <body>
-
-
-
 
 
 <!-- <script type="text/javascript" src="js/vue.js"></script> -->
 <!-- <script type="text/javascript" src="js/axios.min.js"></script> -->
 <!-- <script type="text/javascript" src="mint-ui/index.js"></script> -->
-<!-- <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script> -->
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script>
 
 
@@ -39,79 +33,23 @@
 
 
 
+// function Foo(){
+// 	var i=0;
+// 	return function(){
+// 		console.log(i++)
+// 	}
+// }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// var a={},
-// b={key:'b'},
-// c={key:'c'};
-// a[b]=12;
-// a[c]=78;
-// console.log(a[c]);
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// var f1=Foo(),f2=Foo()
+// f1()
+// f1()
+// f2()
 
 
 
 </script>
+
+
 
 </body>
 </html>
