--- a/Examples/demo/58-筛选学历.html
+++ b/Examples/demo/58-筛选学历.html
@@ -70,7 +70,7 @@ sel.onchange=function(){
 };
 
 var dd=data.filter(function(a){
-		return a.name=='王五';
+		return a.name=='张三';
 	});
 dd.forEach(function(a){
 	var tr=document.createElement('tr');
