--- a/Examples/00-test.html
+++ b/Examples/00-test.html
@@ -5,47 +5,24 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>test</title>
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-<!-- <link rel="stylesheet" type="text/css" href="css/default.css"> -->
-<!-- <link rel="stylesheet" type="text/css" href="mint-ui/style.css"> -->
 <style type="text/css">
-*{margin: 0;padding: 0;}
-
+body{height: 2000px;}
 </style>
 </head>
 
 <body>
 
 
+
+
+
 <!-- <script type="text/javascript" src="js/vue.js"></script> -->
 <!-- <script type="text/javascript" src="js/axios.min.js"></script> -->
-<!-- <script type="text/javascript" src="mint-ui/index.js"></script> -->
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script>
-
-
-
-
-
-
-
-
-
-
-
-
-// function Foo(){
-// 	var i=0;
-// 	return function(){
-// 		console.log(i++)
-// 	}
-// }
-
-// var f1=Foo(),f2=Foo()
-// f1()
-// f1()
-// f2()
-
-
+$(window).scroll(function(){
+	console.log($(window).scrollTop())
+})
 
 </script>
 
