--- a/Examples/demo/58-筛选学历.html
+++ b/Examples/demo/58-筛选学历.html
@@ -65,29 +65,16 @@ var data=[
 var sel=document.querySelector('.sel');
 var tbody=document.querySelector('.body');
 
-var dd=[];
-data.forEach(function(a){
+
+sel.onchange=function(){
+	var dd=data.filter(function(a){
+		return a.xueli==sel.value;
+	});
+	dd.forEach(function(a){
 		var tr=document.createElement('tr');
 		tr.innerHTML='<tr><td>'+a.name+'</td><td>'+a.age+'</td><td>'+a.xueli+'</td><td>'+a.job+'</td></tr>';
 		tbody.appendChild(tr);
 	});
-sel.onchange=function(){
-	if (this.value=='全部学历') {
-		data.forEach(function(a){
-			var tr=document.createElement('tr');
-			tr.innerHTML='<tr><td>'+a.name+'</td><td>'+a.age+'</td><td>'+a.xueli+'</td><td>'+a.job+'</td></tr>';
-			tbody.appendChild(tr);
-		});
-	} else {
-		dd=data.filter(function(a){
-			return a.xueli==sel.value;
-		});
-		dd.forEach(function(a){
-			var tr=document.createElement('tr');
-			tr.innerHTML='<tr><td>'+a.name+'</td><td>'+a.age+'</td><td>'+a.xueli+'</td><td>'+a.job+'</td></tr>';
-			tbody.appendChild(tr);
-		});
-	}
 };
 
 
