--- a/Examples/00-test.html
+++ b/Examples/00-test.html
@@ -6,12 +6,16 @@
 <title>test</title>
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 <style type="text/css">
+
 </style>
 </head>
 
 <body>
+<ul class="wrap">
+	
+</ul>
 
-
+<div class="box"></div>
 
 
 
@@ -19,7 +23,20 @@
 <!-- <script type="text/javascript" src="js/axios.min.js"></script> -->
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script>
-
+$(document).ready(function() {
+	
+	$.ajax({
+		url:'http://jsonplaceholder.typicode.com/users',
+		type:'get',
+		success:function(data){
+			var wrap=document.querySelector('.wrap');
+			$.each(data,function(index,item){
+				console.log(item.name);
+				wrap.innerHTML+='<li>'+item.name+'</li>'
+			});
+		}
+	})
+});
 
 
 </script>
