--- a/Examples/07-Bootstrap.html
+++ b/Examples/07-Bootstrap.html
@@ -5,48 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Bootstrap</title>
-<link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="bootstrap-4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
-    <div class="row" >
-        <div class="col-xs-6 col-sm-3" 
-            style="background-color: #dedef8;
-            box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </div>
-        <div class="col-xs-6 col-sm-3" 
-        style="background-color: #dedef8;box-shadow: 
-        inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-            enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-            nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
-            eiusmod tempor incididunt ut. 
-            </p>
-        </div>
- 
-        <div class="clearfix visible-xs"></div>
- 
-        <div class="col-xs-6 col-sm-3" 
-        style="background-color: #dedef8;
-        box-shadow:inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. 
-            </p>
-        </div>
-        <div class="col-xs-6 col-sm-3" 
-        style="background-color: #dedef8;box-shadow: 
-        inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-            enim ad minim 
-            </p>
-        </div>
-    </div>
-</div>
 
 
 
@@ -55,8 +16,7 @@
 
 
 
-
-<script type="text/javascript" src="bootstrap-3.3.7/js/jquery-3.2.1.min.js"></script>  
-<script type="text/javascript" src="bootstrap-3.3.7/js/bootstrap.min.js"></script> 
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="bootstrap-4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
