--- a/Examples/demo/19-返回顶部.html
+++ b/Examples/demo/19-返回顶部.html
@@ -4,15 +4,11 @@
 <meta charset="utf-8">
 <!--禁止缩放-->
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-<!--共用样式-->
-<link rel="stylesheet" type="text/css" href="css/public.css">
-<!--字体图标-->
-<link rel="stylesheet" type="text/css" href="font/font-awesome.css">
-<script src="js/jquery.js"></script>
+
 <title>返回顶部</title>
 <style>
 body{height: 2000px;}
-#back-top-btn{ width:50px; height:50px; background:#009688; text-align:center; line-height:50px; position:fixed; right:50px; bottom:60px; font-size:30px; border-radius:4px;cursor: pointer;color: #fff;}
+#back-top-btn{ width:50px; height:50px; background:#009688; text-align:center; line-height:50px; position:fixed; right:50px; bottom:60px; border-radius:4px;cursor: pointer;color: #fff;}
 </style>
 </head>
 
@@ -20,8 +16,10 @@ body{height: 2000px;}
 
 
 <!-- 返回顶部 -->
-<div id="back-top-btn"><i class="fa fa-angle-up"></i></div>
+<div id="back-top-btn">顶部</div>
 
+
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script> 
 $(function(){ 
 //当滚动条的位置处于距顶部100像素以下时，返回顶部按钮出现，否则消失 
@@ -29,11 +27,11 @@ $(function () {
 $("#back-top-btn").hide();
 $(window).scroll(function(){ 
 if ($(window).scrollTop()>100){ 
-$("#back-top-btn").fadeIn(500); 
+$("#back-top-btn").fadeIn(200); 
 } 
 else 
 { 
-$("#back-top-btn").fadeOut(500); 
+$("#back-top-btn").fadeOut(200); 
 } 
 }); 
 //当点击返回顶部按钮后，回到页面顶部位置 
