--- a/Examples/00-test.html
+++ b/Examples/00-test.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+hello world
 
 <!-- <script type="text/javascript" src="js/vue.js"></script> -->
 <!-- <script type="text/javascript" src="js/axios.min.js"></script> -->
